--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,10 @@
     },
     "require": {
         "typo3/flow": "dev-master",
-        "typo3/welcome": "dev-master"
+        "typo3/phoenix": "dev-master",
+        "typo3/setup": "dev-master",
+        "typo3/expose": "dev-master",
+        "typo3/phoenixdemotypo3org": "dev-master"
     },
     "require-dev": {
         "typo3/kickstart": "dev-master",
