--- a/composer.json
+++ b/composer.json
@@ -14,10 +14,11 @@
     },
     "require": {
         "typo3/flow": "dev-master",
-        "typo3/phoenix": "dev-master",
+        "typo3/neos": "dev-master",
         "typo3/setup": "dev-master",
         "typo3/expose": "dev-master",
-        "typo3/phoenixdemotypo3org": "dev-master"
+        "typo3/neosdemotypo3org": "dev-master",
+        "famelo/gerrit": "*"
     },
     "require-dev": {
         "typo3/kickstart": "dev-master",
