--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "famelo/project/neos",
+    "name": "famelo/neos",
     "description" : "Neos Project Template with Expose",
     "license": "LGPL-3.0+",
     "repositories": [
