--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "typo3/setup": "dev-master",
         "typo3/expose": "dev-master",
         "typo3/neosdemotypo3org": "dev-master",
-        "famelo/gerrit": "*"
+        "famelo/gerrit": "*",
+        "famelo/contentmanagement": "*"
     },
     "require-dev": {
         "typo3/kickstart": "dev-master",
